--- a/Project.WebUI/Views/Home/Index.cshtml
+++ b/Project.WebUI/Views/Home/Index.cshtml
@@ -116,7 +116,7 @@ else
                 <th>Cep Telefonu</th>
                 <th>
                 <a class="btn btn-outline-success" href="#" id="toggleAddArea">Ekle</a>
-                <a class="btn btn-outline-info" asp-action="OnPostExport">İndir</a>
+                <a class="btn btn-outline-info" asp-action="OnPostExport">İndir<small>(.xlsx)</small></a>
                 </th>
             </tr>
         </thead>
